Update and rename shop0.html to shop.html

--- a/shop.html
+++ b/shop.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 1 ===== -->
     <div class="col-md-4 product-item" data-size="28x18x13" data-price="450">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/1.html" class="text-decoration-none text-dark">
+            <a href="1.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_01.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 28*18*13</h5>
@@ -156,7 +156,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 2 ===== -->
     <div class="col-md-4 product-item" data-size="19x14x7" data-price="210">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/2.html" class="text-decoration-none text-dark">
+            <a href="2.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_02.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 19*14*7</h5>
@@ -170,7 +170,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 3 ===== -->
     <div class="col-md-4 product-item" data-size="17x11x7" data-price="120">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/3.html" class="text-decoration-none text-dark">
+            <a href="3.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_03.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 17*11*7</h5>
@@ -184,7 +184,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 4 ===== -->
     <div class="col-md-4 product-item" data-size="15x15x25" data-price="370">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/4.html" class="text-decoration-none text-dark">
+            <a href="4.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_04.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 15*15*25</h5>
@@ -198,7 +198,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 5 ===== -->
     <div class="col-md-4 product-item" data-size="33x36x24" data-price="800">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/5.html" class="text-decoration-none text-dark">
+            <a href="5.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_05.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 33*36*24</h5>
@@ -212,7 +212,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 6 ===== -->
     <div class="col-md-4 product-item" data-size="120x25x25" data-price="1650">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/6.html" class="text-decoration-none text-dark">
+            <a href="6.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_06.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 120*25*25</h5>
@@ -226,7 +226,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 7 ===== -->
     <div class="col-md-4 product-item" data-size="60x60x60" data-price="2500">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/7.html" class="text-decoration-none text-dark">
+            <a href="7.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_07.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 60*60*60</h5>
@@ -240,7 +240,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 8 ===== -->
     <div class="col-md-4 product-item" data-size="33x25x15" data-price="550">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/8.html" class="text-decoration-none text-dark">
+            <a href="8.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_08.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 33*25*15</h5>
@@ -254,7 +254,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 9 ===== -->
     <div class="col-md-4 product-item" data-size="19x14x7" data-price="188">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/9.html" class="text-decoration-none text-dark">
+            <a href="9.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_09.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 19*14*7</h5>
@@ -268,7 +268,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 10 ===== -->
     <div class="col-md-4 product-item" data-size="37x24x10" data-price="850">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/10.html" class="text-decoration-none text-dark">
+            <a href="10.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_10.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 37*24*10</h5>
@@ -282,7 +282,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 11 ===== -->
     <div class="col-md-4 product-item" data-size="35x45x10" data-price="290">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/11.html" class="text-decoration-none text-dark">
+            <a href="11.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_11.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 35*45*10</h5>
@@ -296,7 +296,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 12 ===== -->
     <div class="col-md-4 product-item" data-size="34x21x17" data-price="850">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/12.html" class="text-decoration-none text-dark">
+            <a href="12.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_12.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 34*21*17</h5>
@@ -310,7 +310,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 13 ===== -->
     <div class="col-md-4 product-item" data-size="17x14x5" data-price="850">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/13.html" class="text-decoration-none text-dark">
+            <a href="13.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_13.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 17*14*5</h5>
@@ -324,7 +324,7 @@ https://templatemo.com/tm-559-zay-shop
     <!-- ===== КАРТОЧКА 14 ===== -->
     <div class="col-md-4 product-item" data-size="14x7x6" data-price="100">
         <div class="card mb-4 product-wap">
-            <a href="/templatemo_559_zay_shop/14.html" class="text-decoration-none text-dark">
+            <a href="14.html" class="text-decoration-none text-dark">
                 <img src="assets/img/shop_14.png" class="card-img-top img-fluid" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Коробка 14*7*6</h5>
